# vedic-ghadi

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/tests/: test_api.py  test_ashtakavarga.py  test_bipolar.py  test_full_lattice.py  test_meridian_registry.py  test_meridians.py  test_pancha_per_cell.py  test_panchanga.py  test_parity.py  test_substrate.py  test_trimurti.py
backend/vedic_ghadi/: __init__.py  __main__.py  api.py  ashtakavarga.py  cli.py  ghadi.py  panchanga.py  substrate.py  vargas.py
frontend/: .dockerignore  CI_TEST.md  Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/api/ghadi/: route.ts
frontend/components/: CellDetailPanel.tsx  FormulaePanel.tsx  GhadiClock.tsx  LayerCard.tsx  MeridianComparison.tsx  MeridianGrid.tsx  Sphota3D.tsx  Sphota3DDial.tsx  Sphota3DIso.tsx  SphotaSunburst.tsx  TimeMachine.tsx  TimeYantra.tsx
frontend/e2e/: ghadi.spec.ts
frontend/lib/: _parity_shim.mts  ashtakavarga.ts  panchanga.ts  substrate.ts  vargas.ts
scripts/: audit_formulae.py  deploy.sh  dev.sh  poll_vercel_deploy.py  test.sh
